import java.util.regex.Matcher

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'java-library'

    // Publish
    id 'maven-publish'
    id 'net.researchgate.release' version '3.1.0'

    // Code quality
    id 'com.github.sherter.google-java-format' version '0.9'

    // JavaFX
    id 'org.openjfx.javafxplugin' version '0.1.0'
    // Shadow JAR
    id 'com.gradleup.shadow' version '9.4.0'
}

// Variables
def main_class = 'application.Launcher'

static def getDate() { return new Date().format('dd.MM.yyyy HH:mm:ss') }

verifyGoogleJavaFormat.enabled = false
commitNewVersion.enabled = false
repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

javafx {
    version = '21'
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.swing']
}

dependencies {
    // Gradle dependencies
    // This dependency is used by the application.
    implementation 'com.google.guava:guava:33.0.0-jre'

    // Exporting to iCal
    // https://github.com/mangstadt/biweekly
    implementation 'net.sf.biweekly:biweekly:0.6.7'

    // JSON parsing
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'

    //Log4J
    implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'

    // Test dependencies
    // Use JUnit test framework.
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.assertj:assertj-core:3.25.3'
}

test {
    useJUnitPlatform()
}

application {
    // Define the main class for the application.
    getMainClass().set(main_class)
}

jar {
    manifest {
        attributes 'Implementation-Title': rootProject.name,
                'Implementation-Version': archiveVersion.get(),
                'Main-Class': main_class,
                'Build-Time-ISO-8601': getDate(),
                'Multi-Release': 'true'
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

// Debug infos when building
tasks.withType(JavaCompile) {
    options.compilerArgs += "-Xlint:unchecked"
    options.compilerArgs += "-Xlint:deprecation"
}


tasks.withType(Jar) {
    destinationDirectory = file("$rootDir/build/jar")
}
tasks.withType(Javadoc) {
    destinationDir = file("$rootDir/build/doc")
}

publishing {
    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/SirMoM/BirthdayManager")

            credentials {
                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
                password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
            }
        }
    }
    publications {
        gpr(MavenPublication) {
            groupId = 'sirmom'
            artifactId = project.name.toLowerCase()
            version = getVersion()

            from components.java
        }
    }
}

release {
    failOnCommitNeeded = true
    failOnPublishNeeded = true
    failOnSnapshotDependencies = true
    failOnUnversionedFiles = true
    failOnUpdateNeeded = true
    revertOnFail = true
    preCommitText = ''
    preTagCommitMessage = '[Gradle Release Plugin] - pre tag commit: '
    tagCommitMessage = '[Gradle Release Plugin] - creating tag: '
    newVersionCommitMessage = '[Gradle Release Plugin] - new version commit: '
    tagTemplate = '${version}'
    versionPropertyFile = 'gradle.properties'
    versionProperties = []
    snapshotSuffix = '-SNAPSHOT'
    buildTasks = ['build']
    ignoredSnapshotDependencies = []
    versionPatterns = [
            /(\d+)([^\d]*$)/: { Matcher m, Project p -> m.replaceAll("${(m[0][1] as int) + 1}${m[0][2]}") }
    ]
    pushReleaseVersionBranch = 'false'
    scmAdapters = [
            net.researchgate.release.GitAdapter
    ]

    git {
        requireBranch.set('master')
        pushToRemote.set('origin')
        pushToBranchPrefix.set('releases/')
        commitVersionFileOnly.set(false)
        signTag.set(false)
    }
}
